# LearnOpenGL

./: CMakeLists.txt  Makefile  README.md
include/: Camera.h  Shader.h  functions.h  glad.h
shaders/681/: shader.vs
shaders/682/: shader.vs
shaders/683/: shader.fs  shader.vs
shaders/7801/: shader.fs
shaders/781/: shader.fs
shaders/784/: shader.fs
shaders/917/: shader.vs
shaders/918/: shader.fs  shader.vs
shaders/multicolor_cubes/: shader.fs
src/: 3d.cpp  Camera.cpp  Shader.cpp  glad.c  light.cpp  main.cpp  rectangle.cpp  triangles.cpp
